--- a/index.html
+++ b/index.html
@@ -20,3 +20,17 @@
 
 </body>
 </html>
+
+# make some changes 
+
+# add all files to staging
+git add -A 
+
+# make a commit (a checkpoint!)
+git commit -m "A description of your change"
+
+# send it to github
+git push
+
+
+
