--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<div class="box box7"></div>
 	<div class="box box8"></div>
 	<div class="box box9"></div>
+	<div class="box box10"></div>
 
 	<div class="loader">
 	</div>
@@ -32,5 +33,4 @@ git commit -m "A description of your change"
 # send it to github
 git push
 
-
-
+cd t
