--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<div class="box box8"></div>
 	<div class="box box9"></div>
 	<div class="box box10"></div>
+	<div class="box box11"></div>
 
 	<div class="loader">
 	</div>
